// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index settings acceleration components renders acceleration index settings with default options 1`] = `
Array [
  <div
    className="euiText euiText--medium"
    data-test-subj="define-index-header"
  >
    <h3>
      Define Index
    </h3>
  </div>,
  <div
    className="euiSpacer euiSpacer--s"
  />,
  <div
    className="euiFormRow"
    id="random_html_id-row"
  >
    <div
      className="euiFormRow__labelWrapper"
    >
      <label
        className="euiFormLabel euiFormRow__label"
        htmlFor="random_html_id"
      >
        Refresh type
      </label>
    </div>
    <div
      className="euiFormRow__fieldWrapper"
    >
      <div
        className="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiSuperSelect"
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="euiPopover__anchor"
        >
          <div>
            Array [
              <input
                id="random_html_id"
                type="hidden"
                value="auto"
              />,
              <div
                className="euiFormControlLayout"
              >
                <div
                  className="euiFormControlLayout__childrenWrapper"
                >
                  <span
                    className="euiScreenReaderOnly"
                    id="random_html_id"
                  >
                    Select an option: Auto, is selected
                  </span>
                  <button
                    aria-describedby="random_html_id-help-0"
                    aria-haspopup="true"
                    aria-labelledby="random_html_id random_html_id"
                    className="euiSuperSelectControl"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    type="button"
                  >
                    Auto
                  </button>
                  <div
                    className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                  >
                    <span
                      className="euiFormControlLayoutCustomIcon"
                    >
                      <svg
                        aria-hidden={true}
                        className="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                        focusable="false"
                        height={16}
                        role="img"
                        style={null}
                        viewBox="0 0 16 16"
                        width={16}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
              </div>,
            ]
          </div>
        </div>
      </div>
      <div
        className="euiFormHelpText euiFormRow__text"
        id="random_html_id-help-0"
      >
        Specify how often the index should refresh, which publishes the most recent changes and make them available for search.
      </div>
    </div>
  </div>,
  <div
    className="euiFormRow"
    id="random_html_id-row"
  >
    <div
      className="euiFormRow__labelWrapper"
    >
      <label
        aria-invalid={false}
        className="euiFormLabel euiFormRow__label"
        htmlFor="random_html_id"
      >
        Checkpoint location
      </label>
    </div>
    <div
      className="euiFormRow__fieldWrapper"
    >
      <div
        className="euiFormControlLayout"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <input
            aria-describedby="random_html_id-help-0"
            aria-label="Use aria labels when no actual label is in use"
            className="euiFieldText"
            id="random_html_id"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="s3://checkpoint/location"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="euiFormHelpText euiFormRow__text"
        id="random_html_id-help-0"
      >
        The HDFS compatible file system location path for incremental refresh job checkpoint.
      </div>
    </div>
  </div>,
]
`;

exports[`Index settings acceleration components renders acceleration index settings with different options1 1`] = `
Array [
  <div
    className="euiText euiText--medium"
    data-test-subj="define-index-header"
  >
    <h3>
      Define Index
    </h3>
  </div>,
  <div
    className="euiSpacer euiSpacer--s"
  />,
  <div
    className="euiFormRow"
    id="random_html_id-row"
  >
    <div
      className="euiFormRow__labelWrapper"
    >
      <label
        className="euiFormLabel euiFormRow__label"
        htmlFor="random_html_id"
      >
        Refresh type
      </label>
    </div>
    <div
      className="euiFormRow__fieldWrapper"
    >
      <div
        className="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiSuperSelect"
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="euiPopover__anchor"
        >
          <div>
            Array [
              <input
                id="random_html_id"
                type="hidden"
                value="auto"
              />,
              <div
                className="euiFormControlLayout"
              >
                <div
                  className="euiFormControlLayout__childrenWrapper"
                >
                  <span
                    className="euiScreenReaderOnly"
                    id="random_html_id"
                  >
                    Select an option: Auto, is selected
                  </span>
                  <button
                    aria-describedby="random_html_id-help-0"
                    aria-haspopup="true"
                    aria-labelledby="random_html_id random_html_id"
                    className="euiSuperSelectControl"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    type="button"
                  >
                    Auto
                  </button>
                  <div
                    className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                  >
                    <span
                      className="euiFormControlLayoutCustomIcon"
                    >
                      <svg
                        aria-hidden={true}
                        className="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
                        focusable="false"
                        height={16}
                        role="img"
                        style={null}
                        viewBox="0 0 16 16"
                        width={16}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                          fillRule="non-zero"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
              </div>,
            ]
          </div>
        </div>
      </div>
      <div
        className="euiFormHelpText euiFormRow__text"
        id="random_html_id-help-0"
      >
        Specify how often the index should refresh, which publishes the most recent changes and make them available for search.
      </div>
    </div>
  </div>,
  <div
    className="euiFormRow"
    id="random_html_id-row"
  >
    <div
      className="euiFormRow__labelWrapper"
    >
      <label
        aria-invalid={false}
        className="euiFormLabel euiFormRow__label"
        htmlFor="random_html_id"
      >
        Checkpoint location
      </label>
    </div>
    <div
      className="euiFormRow__fieldWrapper"
    >
      <div
        className="euiFormControlLayout"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <input
            aria-describedby="random_html_id-help-0"
            aria-label="Use aria labels when no actual label is in use"
            className="euiFieldText"
            id="random_html_id"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="s3://checkpoint/location"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="euiFormHelpText euiFormRow__text"
        id="random_html_id-help-0"
      >
        The HDFS compatible file system location path for incremental refresh job checkpoint.
      </div>
    </div>
  </div>,
]
`;

exports[`Index settings acceleration components renders acceleration index settings with different options2 1`] = `
Array [
  <div
    className="euiText euiText--medium"
    data-test-subj="define-index-header"
  >
    <h3>
      Define Index
    </h3>
  </div>,
  <div
    className="euiSpacer euiSpacer--s"
  />,
  <div
    className="euiFormRow"
    id="random_html_id-row"
  >
    <div
      className="euiFormRow__labelWrapper"
    >
      <label
        className="euiFormLabel euiFormRow__label"
        htmlFor="random_html_id"
      >
        Refresh type
      </label>
    </div>
    <div
      className="euiFormRow__fieldWrapper"
    >
      <div
        className="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiSuperSelect"
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="euiPopover__anchor"
        >
          <div>
            Array [
              <input
                id="random_html_id"
                type="hidden"
                value="auto"
              />,
              <div
                className="euiFormControlLayout"
              >
                <div
                  className="euiFormControlLayout__childrenWrapper"
                >
                  <span
                    className="euiScreenReaderOnly"
                    id="random_html_id"
                  >
                    Select an option: Auto, is selected
                  </span>
                  <button
                    aria-describedby="random_html_id-help-0"
                    aria-haspopup="true"
                    aria-labelledby="random_html_id random_html_id"
                    className="euiSuperSelectControl"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    type="button"
                  >
                    Auto
                  </button>
                  <div
                    className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                  >
                    <span
                      className="euiFormControlLayoutCustomIcon"
                    >
                      <svg
                        aria-hidden={true}
                        className="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
                        focusable="false"
                        height={16}
                        role="img"
                        style={null}
                        viewBox="0 0 16 16"
                        width={16}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                          fillRule="non-zero"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
              </div>,
            ]
          </div>
        </div>
      </div>
      <div
        className="euiFormHelpText euiFormRow__text"
        id="random_html_id-help-0"
      >
        Specify how often the index should refresh, which publishes the most recent changes and make them available for search.
      </div>
    </div>
  </div>,
  <div
    className="euiFormRow"
    id="random_html_id-row"
  >
    <div
      className="euiFormRow__labelWrapper"
    >
      <label
        aria-invalid={false}
        className="euiFormLabel euiFormRow__label"
        htmlFor="random_html_id"
      >
        Checkpoint location
      </label>
    </div>
    <div
      className="euiFormRow__fieldWrapper"
    >
      <div
        className="euiFormControlLayout"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <input
            aria-describedby="random_html_id-help-0"
            aria-label="Use aria labels when no actual label is in use"
            className="euiFieldText"
            id="random_html_id"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="s3://checkpoint/location"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="euiFormHelpText euiFormRow__text"
        id="random_html_id-help-0"
      >
        The HDFS compatible file system location path for incremental refresh job checkpoint.
      </div>
    </div>
  </div>,
]
`;
